--- a/build.gradle
+++ b/build.gradle
@@ -34,22 +34,25 @@ dependencies {
 
     //시큐리티 관련
     implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
     testImplementation 'org.springframework.security:spring-security-test'
-
     implementation group: 'org.json', name: 'json', version: '20220924'
 
     compileOnly('javax.servlet:javax.servlet-api:4.0.1')
-
-    //스웨거 관련
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
-
+//
+//    //스웨거 관련
+//    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
+//
 
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.security:spring-security-test'
+
+    //채팅관련
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    implementation 'org.webjars:sockjs-client:1.1.2'
+    implementation 'org.webjars:stomp-websocket:2.3.3-1'
+    implementation 'org.springdoc:springdoc-openapi-ui:1.6.6'
 }
 
 tasks.named('test') {
