--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,9 @@ dependencies {
     implementation 'org.webjars:sockjs-client:1.1.2'
     implementation 'org.webjars:stomp-websocket:2.3.3-1'
     implementation 'org.springdoc:springdoc-openapi-ui:1.6.6'
+
+    //DB
+    implementation("org.mariadb.jdbc:mariadb-java-client:2.1.2")
 }
 
 tasks.named('test') {
