--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:db;MODE=MYSQL;
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.url=jdbc:mariadb://hanghaemarket.cgppoq74vxzs.us-east-1.rds.amazonaws.com:3306/hanghaeMarket
+spring.datasource.username=root
+spring.datasource.password=rkdehdgus
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.thymeleaf.cache=false
 
 spring.jpa.properties.hibernate.show_sql=true
