--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,12 @@ dependencies {
     compileOnly('javax.servlet:javax.servlet-api:4.0.1')
 
     //스웨거 관련
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
+//    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.1'
+    // 아마존 클라우드
+//    implementation 'org.springframework.cloud:spring-cloud-starter-aws:3.0.1.RELEASE'
+    implementation 'com.amazonaws:aws-java-sdk-s3'
+    implementation 'org.springframework.cloud:spring-cloud-aws-context:2.2.6.RELEASE'
+
 
 
 
