--- a/build.gradle
+++ b/build.gradle
@@ -53,10 +53,14 @@ dependencies {
     //스웨거 관련
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
 
+    implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.7.4'
+
+
+
 
 
     compileOnly 'org.projectlombok:lombok'
-    runtimeOnly 'com.h2database:h2'
+    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
@@ -67,7 +71,7 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-ui:1.6.6'
 
     //DB
-    implementation("org.mariadb.jdbc:mariadb-java-client:2.1.2")
+    implementation "org.mariadb.jdbc:mariadb-java-client:2.1.2"
 }
 
 tasks.named('test') {
