--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,10 +2,12 @@ spring:
   jpa:
     properties:
       hibernate:
+        ddl-auto: update
         globally_quoted_identifiers: 'true'
         format_sql: 'true'
         show_sql: 'true'
     database-platform: org.hibernate.dialect.MariaDB103Dialect
+    generate-ddl: true
   messages:
     encoding: UTF-8
   thymeleaf:
@@ -37,5 +39,6 @@ jwt:
 logging:
   level:
     org:
+      apache.catalina.core.ContainerBase: off
       hibernate:
         SQL: debug
