fix : db ( maria -> mysql)

--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ dependencies {
 
     implementation group: 'org.json', name: 'json', version: '20220924'
 
-    compileOnly('javax.servlet:javax.servlet-api:4.0.1')
+//    compileOnly('javax.servlet:javax.servlet-api:4.0.1')
 
     //스웨거 관련
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
@@ -60,7 +60,7 @@ dependencies {
 
 
     compileOnly 'org.projectlombok:lombok'
-    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+    runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
@@ -71,7 +71,7 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-ui:1.6.6'
 
     //DB
-    implementation "org.mariadb.jdbc:mariadb-java-client:2.1.2"
+//    implementation "org.mariadb.jdbc:mariadb-java-client:2.1.2"
 }
 
 tasks.named('test') {
