--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
         globally_quoted_identifiers: 'true'
         format_sql: 'true'
         show_sql: 'true'
-    database-platform: org.hibernate.dialect.MariaDB103Dialect
+    database-platform: org.hibernate.dialect.MySQL8Dialect
     generate-ddl: true
   messages:
     encoding: UTF-8
@@ -17,10 +17,10 @@ spring:
       max-file-size: 7MB
       max-request-size: 7MB
   datasource:
-    password: rkdehdgus
-    driver-class-name: org.mariadb.jdbc.Driver
-    username: root
-    url: jdbc:mariadb://hanghaemarket.cyjzfk9jlzie.ap-northeast-2.rds.amazonaws.com:3306/hanghaeMarket
+    password: CuWVhXXruu6r66IQfpk1
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: admin
+    url: jdbc:mysql://database-1.cj0sf85wszsu.ap-northeast-2.rds.amazonaws.com:3306/hanghaeMarket
 cloud:
   aws:
     s3:
