--- a/build.gradle
+++ b/build.gradle
@@ -55,10 +55,6 @@ dependencies {
 
     implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.7.4'
 
-
-
-
-
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
     annotationProcessor 'org.projectlombok:lombok'
@@ -72,6 +68,10 @@ dependencies {
 
     //DB
     implementation "org.mariadb.jdbc:mariadb-java-client:2.1.2"
+
+    //amazon cloud
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+    implementation 'com.amazonaws:aws-java-sdk-s3'
 }
 
 tasks.named('test') {
