--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ dependencies {
 
     implementation group: 'org.json', name: 'json', version: '20220924'
 
-    compileOnly('javax.servlet:javax.servlet-api:4.0.1')
+//    compileOnly('javax.servlet:javax.servlet-api:4.0.1')
 
     //스웨거 관련
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
@@ -56,7 +56,7 @@ dependencies {
     implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.7.4'
 
     compileOnly 'org.projectlombok:lombok'
-    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+    runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
@@ -66,10 +66,6 @@ dependencies {
     implementation 'org.webjars:stomp-websocket:2.3.3-1'
     implementation 'org.springdoc:springdoc-openapi-ui:1.6.6'
 
-    //DB
-    implementation "org.mariadb.jdbc:mariadb-java-client:2.1.2"
-
-    //amazon cloud
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
     implementation 'com.amazonaws:aws-java-sdk-s3'
 }
