--- a/build.gradle
+++ b/build.gradle
@@ -55,7 +55,9 @@ dependencies {
 
     implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.7.4'
 
-
+    implementation 'net.nurigo:sdk:4.2.4'
+    implementation 'net.nurigo:javaSDK:2.2'
+    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
 
 
 
