--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,7 @@ dependencies {
     //스웨거 관련
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
 
-    implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.7.4'
+//    implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.7.4'
 
     implementation 'net.nurigo:sdk:4.2.4'
     implementation 'net.nurigo:javaSDK:2.2'
